<resources>
    <string name="app_name">Remote Control</string>
    <string name="sign_in_name">RC system</string>
    <string name="hint_device_name">Device name</string>
    <string name="hint_ap_password">Password</string>
    <string name="help_ap_password">Type in WiFi password</string>
    <string name="device_default">default</string>

    <!-- AlertDialog messages -->
    <string name="add_device">Add a new device</string>
    <string name="add">add</string>
    <string name="add_meg">Already added, named default/nIf you want to modify, press device long./nThanks.。</string>


    <string name="choice_action">Choice action</string>

    <string name="modify">Modify</string>
    <string name="modify_device_name">modify device name</string>
    <string name="modify_relay_name">modify relay name</string>

    <string name="delete_device">Delete</string>
    <string name="check_once">Delete device, yes or no?</string>
    <string name="check_twice">Are you sure?</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Sign-in status messages -->
    <string name="sign_in">Sign in</string>
    <string name="sign_in_button">Sign in with Google</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="server_client_id">183097898264-pvkcvs489oehd8sa2vmi64f3gspinqs9.apps.googleusercontent.com</string>

    <!--ESP8266-->
    <string name="esprssif_license">ESPRSSIF MIT License Copyright © 2019 ESPRESSIF SYSTEMS (SHANGHAI) PTE LTD
        乐鑫 MIT 许可证 版权 © 2019 乐鑫信息科技（上海）股份有限公司</string>

    <string name="smartconfig_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="smartconfig_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="smartconfig_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="smartconfig_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>

    <string name="smartconfig_title">SmartConfig</string>
    <string name="smartconfig_about_version">SmartConfig version:</string>
    <string name="smartconfig_ssid_title">SSID: </string>
    <string name="smartconfig_bssid_title">BSSID: </string>
    <string name="smartconfig_password_title">Password: </string>
    <string name="smartconfig_device_count_title">Device count: </string>
    <string name="smartconfig_package_broadcast">Broadcast</string>
    <string name="smartconfig_package_multicast">Multicast</string>
    <string name="smartconfig_confirm">Confirm</string>
    <string name="smartconfig_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>
    <string name="smartconfig_location_permission_title">⚠️Warning</string>
    <string name="smartconfig_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="smartconfig_configuring_message">SmartConfig is configuring, please wait for a moment…</string>
    <string name="smartconfig_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="smartconfig_configure_result_failed">SmartConfig failed</string>
    <string name="smartconfig_configure_result_failed_port">Create SmartConfig task failed, the SmartConfig port could be used by other thread</string>
    <string name="smartconfig_configure_result_success">SmartConfig success</string>
    <string name="smartconfig_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
</resources>
